Refactor docker-compose.yml to mount the entire database directory and add initial database schema in rss.sql. This includes tables for categories, feeds, entries, filters, and allowlist.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:15001
     volumes:
-      # Uncomment the next line if ./database/rss.db exists on your host machine
-      - ./database/rss.db:/app/app/Data/rss.db
+      - ./database:/app/app/Data
       - keys-volume:/root/.aspnet/DataProtection-Keys
     restart: always
 
