feat: add comprehensive FeedBurner support, including URL detection and resolution; implement pagination for filtered entries in SettingsFilters component; enhance error handling and XML parsing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ASPNETCORE_URLS=http://+:15001
     volumes:
       - ./database:/app/app/Data
+      - ./CHANGELOG.md:/app/CHANGELOG.md
       - keys-volume:/root/.aspnet/DataProtection-Keys
     restart: always
 
